Make bidi adjustment in auto-directioned paragraphs saner

In bidi adjustment for legacy layout, there is a hack that stops any
adjustment if current text box is in 'unicode-bidi: plaintext'. This
is wrong if the auto-directioned paragraph still contains
bidirectional text.

Ideally, we should remove this hack, and check paragraph direction.
However, we don't have a reliable way to do this in legacy layout.
So this patch makes the hack slightly saner that, bidi adjustment
shouldn't stop as long as we are at a bidi boundary, even if we are
in 'unicode-bidi: plaintext'.

Bug: 861559
Cq-Include-Trybots: luci.chromium.try:linux_layout_tests_layout_ng
Change-Id: Ie7e1f704b976adf28a5d143e8265a499af0d62e4
Reviewed-on: https://chromium-review.googlesource.com/1132472
Commit-Queue: Xiaocheng Hu <xiaochengh@chromium.org>
Reviewed-by: Yoshifumi Inoue <yosin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#574362}
Former-commit-id: 2b245c2e812b84d4e58b76dbc0fd6bb14b5d257e